--- a/lib/index.jade
+++ b/lib/index.jade
@@ -487,8 +487,15 @@ html
           // DEV: This loads first matching image only due to `querySelector` instead of `querySelectorAll`
           var expectedDiffImg = expectedImgSetEl.querySelector('[data-compare-type=diff]');
 
-          // Resolve our ratio scale
+          // Adjust our target area based on scaling
+          // TODO: Be sure to test target area scaling for both matching and updated diffs
           var scaleRatio = expectedDiffImg.naturalWidth / expectedDiffImg.width;
+          targetArea = {
+            width: Math.min(Math.ceil(scaleRatio * targetArea.width), expectedDiffImg.naturalWidth),
+            height: Math.min(Math.ceil(scaleRatio * targetArea.height), expectedDiffImg.naturalHeight),
+            left: Math.max(Math.floor(scaleRatio * targetArea.left), 0),
+            top: Math.max(Math.floor(scaleRatio * targetArea.top), 0)
+          };
 
           // Remove previously existing results
           var _resultsEl = expectedImgSetCollapseEl.querySelector('.results');
@@ -539,24 +546,22 @@ html
               // Generate our canvas sized down to the selection
               // https://github.com/scijs/get-pixels/blob/7c447cd979637b31e47e148f238a1e71611af481/dom-pixels.js#L14-L18
               var canvasEl = document.createElement('canvas');
-              var targetWidth = Math.ceil(targetArea.width * scaleRatio);
-              var targetHeight = Math.ceil(targetArea.height * scaleRatio);
-              canvasEl.width = targetWidth;
-              canvasEl.height = targetHeight;
+              canvasEl.width = targetArea.width;
+              canvasEl.height = targetArea.height;
               var context = canvasEl.getContext('2d');
 
               // Draw a clip as a performance precaution, then our image
               // DEV: We haven't tested if using a clip improves performance but assume it should
               // https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/drawImage
               // https://developer.mozilla.org/en-US/docs/Web/API/CanvasRenderingContext2D/rect
-              context.rect(0, 0, targetWidth, targetHeight);
+              context.rect(0, 0, targetArea.width, targetArea.height);
               context.clip();
               // TODO: Verify that drawing scaled images doesn't affect canvas drawing
-              context.drawImage(img, -1 * Math.floor(targetArea.left * scaleRatio), -1 * Math.floor(targetArea.top * scaleRatio));
+              context.drawImage(img, -1 * targetArea.left, -1 * targetArea.top);
 
               // Return our generated canvas
               // https://github.com/scijs/get-pixels/blob/7c447cd979637b31e47e148f238a1e71611af481/dom-pixels.js#L19-L20
-              return context.getImageData(0, 0, targetWidth, targetHeight).data;
+              return context.getImageData(0, 0, targetArea.width, targetArea.height).data;
             }
 
             // Reset HTML/CSS overrides
