Updated page to use new script

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -70,3 +70,7 @@ html
     script
       //- TODO: Make sure there are no XSS holes like `</script><script>alert(1)`
       | window.imageSets = !{JSON.stringify(image_sets)};
+
+    //- Load our script
+    //- TODO: Add an initialization hook (e.g. `Application.init()`)
+    script(src="/lib/js/index.js")
