Added more TODOs

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -64,7 +64,7 @@ html
       | window.imageSets = !{JSON.stringify(image_sets)};
 
     //- Load our script and initialize it
-    script(src="/lib/js/index.js")
+    script(src="/dist/js/index.js")
     script.
       window.application = new Application(window.imageSets);
       Application.bind();
