Fixed up one-offs

--- a/lib/index.jade
+++ b/lib/index.jade
@@ -464,7 +464,7 @@ html
 
           // Filter our similar image sets to selected ones
           return $similarImageSets.filter(function updateImageSet (i, similarImageSetEl) {
-            return (similarImageSet.querySelector('[name=save_update]').checked;
+            return similarImageSetEl.querySelector('[name=save_update]').checked;
           });
         }
 
