--- a/server/views/demo.jade
+++ b/server/views/demo.jade
@@ -6,7 +6,7 @@ block title
 block before-content
   .container-fluid
     h1 multi-image-mergetool demo
-    p This page is fully interactive but not wired to anything so feel free to poke around. Any approved changes will be reset on page refresh.
+    p This page is fully interactive but not wired to anything so feel free to poke around. Any changes will be reset on page refresh.
     hr
 
 block main-script
